// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test done snapshot 1`] = `
<div
  className="item"
>
  <span>
    Tepr 21
  </span>
</div>
`;

exports[`should test todo snapshot 1`] = `
<div
  className="item"
>
  <input
    onChange={[Function]}
    type="checkbox"
  />
  <span>
    Tepr 21
  </span>
</div>
`;
